ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penpot-ingress
  namespace: penpot
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: penpot.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penpot
                port:
                  number: 8080
